Remove invalid DCHECK in [CRWSessionController addPendingItem].

The DCHCECK that server side redirect should not be added as a new item
is invalid in the following scenario:

(1) Navigate to an AMP (Accelerate Mobile Page) -- I do this from
    news.google.fr
(2) Shutdown Chrome on iOS (i.e. switch to another app, then kill the
    app)
(3) Relaunch Chrome on iOS

When Chrome is relaunched, there will be no pending items and somehow a
server side redirect is fired, so a server side redirect item is added
to the chain.

This CL removes the DCHECK.

BUG=710385

Review-Url: https://codereview.chromium.org/2808353007
Cr-Commit-Position: refs/heads/master@{#464310}

Former-commit-id: a4eb8e01f972546913b22a605e31bd22c270cfe8